--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
     </nav>
 
     <header class="bg-primary text-white">
+      
       <div class="container text-center">
+        <h3> <a 
+                href= "startbootstrap-shop-homepage/index.htm"l>shop home page</a></h3>
+      
         <h1>Welcome to Scrolling Nav</h1>
         <p class="lead">A landing page template freshly redesigned for Bootstrap 4</p>
       </div>
